# cpp17

./: .gitignore  CMakeLists.txt  mk.sh
test/: CMakeLists.txt  constexpr_lambda.cpp  fold_expr.cpp  if_constexpr.cpp  if_initializer.cpp  nested_ns.cpp  structured_binding.cpp  template_auto.cpp  timer.hpp  tuple.cpp
